--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
-  "name": "haraka-plugin-template",
+  "name": "haraka-plugin-spamassassin",
   "version": "1.0.0",
-  "description": "Haraka plugin that frobnicates email connections",
+  "description": "Haraka plugin that...CHANGE THIS",
   "main": "index.js",
+  "files": [
+    "CHANGELOG.md",
+    "config"
+  ],
   "scripts": {
-    "lint": "npx eslint *.js test/*.js",
-    "lintfix": "npx eslint --fix *.js test/*.js",
-    "cover": "NODE_ENV=cov npx nyc --reporter=lcovonly npm run test",
+    "format": "npm run prettier:fix && npm run lint:fix",
+    "lint": "npx eslint@^8 *.js test",
+    "lint:fix": "npx eslint@^8 *.js test --fix",
+    "prettier": "npx prettier . --check",
+    "prettier:fix": "npx prettier . --write --log-level=warn",
+    "test": "node --test",
     "versions": "npx dependency-version-checker check",
-    "test": "npx mocha"
+    "versions:fix": "npx dependency-version-checker update"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/haraka/haraka-plugin-template.git"
+    "url": "git+https://github.com/haraka/haraka-plugin-spamassassin.git"
   },
   "keywords": [
     "haraka",
     "plugin",
-    "template"
+    "spamassassin"
   ],
-  "author": "Welcome Member <happy-haraka-hacker@example.com>",
+  "author": "Haraka Team <haraka.team@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/haraka/haraka-plugin-template/issues"
+    "url": "https://github.com/haraka/haraka-plugin-spamassassin/issues"
   },
-  "homepage": "https://github.com/haraka/haraka-plugin-template#readme",
+  "homepage": "https://github.com/haraka/haraka-plugin-spamassassin#readme",
+  "dependencies": {
+    "haraka-net-utils": "^1.7.0",
+    "haraka-utils": "^1.1.3"
+  },
   "devDependencies": {
-    "eslint": "*",
-    "eslint-plugin-haraka": "*",
-    "haraka-test-fixtures": "*",
-    "mocha": "*"
+    "@haraka/eslint-config": "1.1.3",
+    "address-rfc2821": "^2.1.2",
+    "haraka-test-fixtures": "1.3.5"
   }
 }
